--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_hooks: ^0.18.0
   hooks_riverpod: ^0.14.0+5
   flutter_riverpod: ^0.14.0+3
+  flutter_bloc: ^7.3.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
