--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,6 +69,8 @@ flutter:
   uses-material-design: true
   assets:
     - curve_logo.png
+    - chess_pawn.png
+    - bo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
