--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   hooks_riverpod: ^0.14.0+5
   flutter_riverpod: ^0.14.0+3
   flutter_bloc: ^7.3.1
+  rxdart: ^0.27.3
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,7 +70,8 @@ flutter:
   uses-material-design: true
   assets:
     - curve_logo.png
-    - chess_pawn.png
+    - red_pawn.png
+    - blue_pawn.png
     - bo.png
   # To add assets to your application, add an assets section, like this:
   # assets:
