--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_riverpod: ^0.14.0+3
   flutter_bloc: ^7.3.1
   rxdart: ^0.27.3
+  flutter_svg: ^1.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -73,6 +74,10 @@ flutter:
     - red_pawn.png
     - blue_pawn.png
     - bo.png
+    - food.svg
+    - chat.svg
+    - drinks.svg
+    - fruit.svg
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
